2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control: added the depends libio-socket-multicast-perl.

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: cleaned the source code.

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/conffiles: added the conffiles to tell to package maker that its
	the conf file.
	
	* DEBIAN/make_deb_package.sh: changed the script to try to be similar to
	spec RPM (set the location of perl libs). 

2010-05-19  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/make_deb_package.sh: added cpan parameter for to make module
	packages or not.
	
	* pandora_server.spec: force the location of lib.

2010-05-19  Sergio Martin <sergio.martin@artica.es>

	* util/plugin/snmp_process.pl: Added the SNMP Server 
	Plugin to Server.

2010-05-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Server.pm, lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/GIS.pm, lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/ProducerConsumerServer.pm,
	  lib/PandoraFMS/PredictionServer.pm, lib/PandoraFMS/Core.pm,
	  lib/PandoraFMS/ReconServer.pm, lib/PandoraFMS/DataServer.pm,
	  bin/pandora_server, util/pandora_db.pl, util/gpx2pandora_agent_data.pl,
	  util/pandora_manage.pl, util/pandora_dbstress.pl: Added the default library path
	  used by RPM and DEB packages.

2010-05-19  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/DataServer.pm: XML data files coming from a disabled
	agent are now discarded.

	* util/pandora_manage.pl: Added CLI mode to disable/enable agents from	
	a given group. This will help admins to implement recurrent downtime periods.

2010-05-18  Sancho Lerena <slerena@artica.es>

	* pandora_server_upgrade: Fixed a check on pandora_db.pl script in cron.

	* lib/PandoraFMS/Config.pm: Version update to 3.1rc1 and build 100515

2010-05-17  Sergio Martin <sergio.martin@artica.es>
